fixed canvas overflow issues

--- a/index.css
+++ b/index.css
@@ -73,6 +73,10 @@ a {
     margin-bottom: 0;
 }
 
+canvas {
+    width: 100%;
+}
+
 /* mobile */
 
 @media only screen and (max-width: 1050px) {
